# WindowsUI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
ATL.Minimal/: CMakeLists.txt  README.md
ATL.Minimal/src/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
MFC.Minimal/: CMakeLists.txt  README.md
MFC.Minimal/src/: Application.cpp  Application.hpp  Resource.hpp  Window.cpp  Window.hpp
UWP.Minimal/: CMakeLists.txt
UWP.Minimal/src/: App.cpp  App.h  App.xaml  MainPage.cpp  MainPage.h  MainPage.xaml  Package.appxmanifest  pch.h
WTL.Minimal/: CMakeLists.txt  README.md
WTL.Minimal/src/: Application.cpp  Window.cpp  Window.hpp  main.cpp
Win32.Minimal/: CMakeLists.txt  README.md
Win32.Minimal/src/: Application.cpp  Application.hpp  main.cpp
XamlIslandsWinUI/: CMakeLists.txt
XamlIslandsWinUI/src/: App.cpp  App.h  MainWindow.cpp  MainWindow.h  main.cpp
